--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StyleSheet kit</title>
+    <link rel="stylesheet" href="./assets/dist/index.css">
 </head>
 <body>
-    StyleSheet Kit
+   <!-- Color -->
+   <!-- Font size -->
+   <!-- Buttons -->
+   <!-- Cards -->
+   <h2>Cards</h2>
+   <div class="card">
+       <h2 class="card-title">Card Title</h2>
+       <p class="card-body"> 
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti recusandae ea minima, 
+           repellendus  <a href="#">Click!</a>  beatae molestias voluptatem.   
+        </p>
+   </div>
+   <!-- Grid System -->
+   <!-- utilities -->
 </body>
 </html>
