learning maps and loop

--- a/index.html
+++ b/index.html
@@ -9,6 +9,43 @@
 </head>
 <body>
    <!-- Color -->
+   <h2>Colors</h2>
+   <span class="text-primary">primary</span> |
+   <span class="text-secondary">secondary</span> |
+   <span class="text-error">error</span> |
+   <span class="text-info">info</span> |
+   <span class="text-warning">warning</span> |
+   <span class="text-aero-blue">aero-blue</span> |
+   <span class="text-medium-orchid">medium-orchid</span> |
+   <span class="text-teal-blue">teal-blue</span> |
+   <span class="text-forest-green">forest-green</span> |
+   <span class="text-chocolate">chocolate</span> |
+   <span class="text-silver">silver</span> |
+   <span class="text-default">default</span>
+
+   <br><br>
+
+   <span class="bg-primary text-white">primary</span> |
+   <span class="bg-secondary text-white">secondary</span> |
+   <span class="bg-error text-white">error</span> |
+   <span class="bg-info text-white">info</span> |
+   <span class="bg-warning text-white">warning</span> |
+   <span class="bg-aero-blue text-white">aero-blue</span> |
+   <span class="bg-medium-orchid text-white">medium-orchid</span> |
+   <span class="bg-teal-blue text-white">teal-blue</span> |
+   <span class="bg-forest-green text-white">forest-green</span> |
+   <span class="bg-chocolate text-white">chocolate</span> |
+   <span class="bg-silver text-white">silver</span> |
+   <span class="bg-default text-white">default</span>
+
+   <br><br>
+   <span class="bg-primary-dark-9 text-white">primary</span> |
+   <span class="bg-primary-dark-5 text-white">primary</span> |
+   <span class="bg-primary-dark-1 text-white">primary</span> |
+   <span class="bg-primary text-white">primary</span> |
+   <span class="bg-primary-light-1 text-white">primary</span> |
+   <span class="bg-primary-light-5 text-white">primary</span> |
+   <span class="bg-primary-light-9 text-white">primary</span>
    <!-- Font size -->
    <!-- Buttons -->
    <!-- Cards -->
