--- a/index.html
+++ b/index.html
@@ -41,13 +41,27 @@
    <br><br>
    <span class="bg-primary-dark-9 text-white">primary</span> |
    <span class="bg-primary-dark-5 text-white">primary</span> |
-   <span class="bg-primary-dark-1 text-white">primary</span> |
+   <span class="bg-primary-dark-2 text-white">primary</span> |
    <span class="bg-primary text-white">primary</span> |
-   <span class="bg-primary-light-1 text-white">primary</span> |
+   <span class="bg-primary-light-2 text-white">primary</span> |
    <span class="bg-primary-light-5 text-white">primary</span> |
-   <span class="bg-primary-light-9 text-white">primary</span>
+   <span class="bg-primary-light-8 text-white">primary</span>
+    <br><br>
+   <span class="text-primary text-secondary-dark-hover-6">Hover me</span>
+
+   <br><br>
    <!-- Font size -->
    <!-- Buttons -->
+   <h2>Buttons</h2>
+   <button class="btn">default btn</button>
+   <button class="btn-primary text-white">Click me</button>
+   <button class="btn-teal-blue text-white">Click me</button>
+   <button class="btn-info">Click me</button>
+   <button class="btn-secondary-outlined text-hover-white">Click me</button>
+   <button class="btn-warning-outlined text-hover-white">Click me</button>
+   <a href="" class="btn-medium-orchid-outlined text-hover-white">Click me</a>
+
+   <br><br>
    <!-- Cards -->
    <h2>Cards</h2>
    <div class="card">
