--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/dist/index.css">
 </head>
 <body>
+    <h1 class="mt-2 mb-2 text-teal-blue-dark-3">Manjakely</h1>
    <!-- Color -->
    <h2>Colors</h2>
    <span class="text-primary">primary</span> |
@@ -49,8 +50,17 @@
     <br><br>
    <span class="text-primary text-secondary-dark-hover-6">Hover me</span>
 
-   <br><br>
+   <hr class="mt-1 mb-1">
    <!-- Font size -->
+   <h2 class="mb-2">Font Sizes</h2>
+   <div class="font-sm">This is small font</div>
+   <div class="font-md">This is medium font</div>
+   <div class="font-lg">This is large font</div>
+   <div class="font-xl">This is extra large font</div>
+   <div class="font-xxl">This is extra, extra large font</div>
+   
+   <hr class="mt-1 mb-1">
+
    <!-- Buttons -->
    <h2>Buttons</h2>
    <button class="btn">default btn</button>
@@ -61,7 +71,7 @@
    <button class="btn-warning-outlined text-hover-white">Click me</button>
    <a href="" class="btn-medium-orchid-outlined text-hover-white">Click me</a>
 
-   <br><br>
+   <hr class="mt-1 mb-1">
    <!-- Cards -->
    <h2>Cards</h2>
    <div class="card">
@@ -71,7 +81,10 @@
            repellendus  <a href="#">Click!</a>  beatae molestias voluptatem.   
         </p>
    </div>
+
+   <hr class="mt-1 mb-1">
    <!-- Grid System -->
    <!-- utilities -->
+   <span class="test">hello!</span>
 </body>
 </html>
