--- a/index.html
+++ b/index.html
@@ -8,83 +8,172 @@
     <link rel="stylesheet" href="./assets/dist/index.css">
 </head>
 <body>
-    <h1 class="mt-2 mb-2 text-teal-blue-dark-3">Manjakely</h1>
-   <!-- Color -->
-   <h2>Colors</h2>
-   <span class="text-primary">primary</span> |
-   <span class="text-secondary">secondary</span> |
-   <span class="text-error">error</span> |
-   <span class="text-info">info</span> |
-   <span class="text-warning">warning</span> |
-   <span class="text-aero-blue">aero-blue</span> |
-   <span class="text-medium-orchid">medium-orchid</span> |
-   <span class="text-teal-blue">teal-blue</span> |
-   <span class="text-forest-green">forest-green</span> |
-   <span class="text-chocolate">chocolate</span> |
-   <span class="text-silver">silver</span> |
-   <span class="text-default">default</span>
+    <nav class="navbar-teal-blue mb-4">
+        <div class="container">
+            <h2 class="nav-title text-white font-family-parisienne">
+                Manjakely
+            </h2>
+            <p class="font-family-nunito text-white">
+                Awesome CSS that makes your web-site beautiful
+            </p>
+        </div>
+    </nav>
+    <div class="container">
+            
+        <!-- Color -->
+        <h2>Colors</h2>
+        <span class="text-primary">primary</span> |
+        <span class="text-secondary">secondary</span> |
+        <span class="text-error">error</span> |
+        <span class="text-info">info</span> |
+        <span class="text-warning">warning</span> |
+        <span class="text-aero-blue">aero-blue</span> |
+        <span class="text-medium-orchid">medium-orchid</span> |
+        <span class="text-teal-blue">teal-blue</span> |
+        <span class="text-forest-green">forest-green</span> |
+        <span class="text-chocolate">chocolate</span> |
+        <span class="text-silver">silver</span> |
+        <span class="text-default">default</span>
 
-   <br><br>
+        <br><br>
 
-   <span class="bg-primary text-white">primary</span> |
-   <span class="bg-secondary text-white">secondary</span> |
-   <span class="bg-error text-white">error</span> |
-   <span class="bg-info text-white">info</span> |
-   <span class="bg-warning text-white">warning</span> |
-   <span class="bg-aero-blue text-white">aero-blue</span> |
-   <span class="bg-medium-orchid text-white">medium-orchid</span> |
-   <span class="bg-teal-blue text-white">teal-blue</span> |
-   <span class="bg-forest-green text-white">forest-green</span> |
-   <span class="bg-chocolate text-white">chocolate</span> |
-   <span class="bg-silver text-white">silver</span> |
-   <span class="bg-default text-white">default</span>
+        <span class="bg-primary text-white">primary</span> |
+        <span class="bg-secondary text-white">secondary</span> |
+        <span class="bg-error text-white">error</span> |
+        <span class="bg-info text-white">info</span> |
+        <span class="bg-warning text-white">warning</span> |
+        <span class="bg-aero-blue text-white">aero-blue</span> |
+        <span class="bg-medium-orchid text-white">medium-orchid</span> |
+        <span class="bg-teal-blue text-white">teal-blue</span> |
+        <span class="bg-forest-green text-white">forest-green</span> |
+        <span class="bg-chocolate text-white">chocolate</span> |
+        <span class="bg-silver text-white">silver</span> |
+        <span class="bg-default text-white">default</span>
 
-   <br><br>
-   <span class="bg-primary-dark-9 text-white">primary</span> |
-   <span class="bg-primary-dark-5 text-white">primary</span> |
-   <span class="bg-primary-dark-2 text-white">primary</span> |
-   <span class="bg-primary text-white">primary</span> |
-   <span class="bg-primary-light-2 text-white">primary</span> |
-   <span class="bg-primary-light-5 text-white">primary</span> |
-   <span class="bg-primary-light-8 text-white">primary</span>
-    <br><br>
-   <span class="text-primary text-secondary-dark-hover-6">Hover me</span>
+        <br><br>
+        <span class="bg-primary-dark-9 text-white">primary dark 9</span> |
+        <span class="bg-primary-dark-5 text-white">primary dark 5</span> |
+        <span class="bg-primary-dark-2 text-white">primary dark 2</span> |
+        <span class="bg-primary text-white">primary</span> |
+        <span class="bg-primary-light-2 text-white">primary light 2</span> |
+        <span class="bg-primary-light-5 text-white">primary light 5</span> |
+        <span class="bg-primary-light-8 text-white">primary light 8</span>
+            <br><br>
+        <span class="text-primary text-secondary-dark-hover-6">Hover me</span>
 
-   <hr class="mt-1 mb-1">
-   <!-- Font size -->
-   <h2 class="mb-2">Font Sizes</h2>
-   <div class="font-sm">This is small font</div>
-   <div class="font-md">This is medium font</div>
-   <div class="font-lg">This is large font</div>
-   <div class="font-xl">This is extra large font</div>
-   <div class="font-xxl">This is extra, extra large font</div>
-   
-   <hr class="mt-1 mb-1">
+        <hr class="mt-1 mb-1">
+        <!-- Font size -->
+        <h2 class="mb-2">Font Sizes</h2>
+        <div class="font-sm">This is small font</div>
+        <div class="font-md">This is medium font</div>
+        <div class="font-lg">This is large font</div>
+        <div class="font-xl">This is extra large font</div>
+        <div class="font-xxl">This is extra, extra large font</div>
+        
+        <hr class="mt-1 mb-1">
 
-   <!-- Buttons -->
-   <h2>Buttons</h2>
-   <button class="btn">default btn</button>
-   <button class="btn-primary text-white">Click me</button>
-   <button class="btn-teal-blue text-white">Click me</button>
-   <button class="btn-info">Click me</button>
-   <button class="btn-secondary-outlined text-hover-white">Click me</button>
-   <button class="btn-warning-outlined text-hover-white">Click me</button>
-   <a href="" class="btn-medium-orchid-outlined text-hover-white">Click me</a>
+        <!-- Buttons -->
+        <h2>Buttons</h2>
+        <button class="btn">default btn</button>
+        <button class="btn-primary text-white">Click me</button>
+        <button class="btn-teal-blue text-white">Click me</button>
+        <button class="btn-info">Click me</button>
+        <button class="btn-secondary-outlined text-hover-white">Click me</button>
+        <button class="btn-warning-outlined text-hover-white">Click me</button>
+        <a href="" class="btn-medium-orchid-outlined text-hover-white">Click me</a>
 
-   <hr class="mt-1 mb-1">
-   <!-- Cards -->
-   <h2>Cards</h2>
-   <div class="card">
-       <h2 class="card-title">Card Title</h2>
-       <p class="card-body"> 
-           Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti recusandae ea minima, 
-           repellendus  <a href="#">Click!</a>  beatae molestias voluptatem.   
-        </p>
-   </div>
+        <hr class="mt-1 mb-1">
+        <!-- Cards -->
+        <h2>Cards</h2>
+        <div class="card">
+            <h2 class="card-title">Card Title</h2>
+            <p class="card-body"> 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti recusandae ea minima, 
+                repellendus  <a href="#">Click!</a>  beatae molestias voluptatem.   
+                </p>
+        </div>
 
-   <hr class="mt-1 mb-1">
-   <!-- Grid System -->
-   <!-- utilities -->
-   <span class="test">hello!</span>
+        <hr class="mt-1 mb-1">
+        <!-- Grid System -->
+        <h2 class="mt-2 mb-2">Grid System</h2>
+            <div class="container">
+                <div class="row grid-1 justify-flex-end">
+                    <div class="col-12-xs col-5-sm col-3-xl">
+                        <div class="card">
+                            <h2 class="card-title">Card Title</h2>
+                            <p class="card-body"> 
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti recusandae ea minima, 
+                                repellendus  <a href="#">Click!</a>  beatae molestias voluptatem.   
+                            </p>  
+                        </div>
+                    </div>
+                    <div class="col-12-xs col-5-sm col-3-xl">
+                        <div class="card">
+                            <h2 class="card-title">Card Title</h2>
+                            <p class="card-body"> 
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti recusandae ea minima, 
+                                repellendus  <a href="#">Click!</a>  beatae molestias voluptatem.   
+                            </p>  
+                        </div>
+                    </div>
+                    <div class="col-12-xs col-5-sm col-3-xl">
+                        <div class="card">
+                            <h2 class="card-title">Card Title</h2>
+                            <p class="card-body"> 
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti recusandae ea minima, 
+                                repellendus  <a href="#">Click!</a>  beatae molestias voluptatem.   
+                            </p>  
+                        </div>
+                    </div>
+                    <div class="col-12-xs col-5-sm col-3-xl">
+                        <div class="card">
+                            <h2 class="card-title">Card Title</h2>
+                            <p class="card-body"> 
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti recusandae ea minima, 
+                                repellendus  <a href="#">Click!</a>  beatae molestias voluptatem.   
+                            </p>  
+                        </div>
+                    </div>
+                    <div class="col-12-xs col-5-sm col-3-xl">
+                        <div class="card">
+                            <h2 class="card-title">Card Title</h2>
+                            <p class="card-body"> 
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti recusandae ea minima, 
+                                repellendus  <a href="#">Click!</a>  beatae molestias voluptatem.   
+                            </p>  
+                        </div>
+                    </div>
+                    <div class="col-12-xs col-5-sm col-3-xl">
+                        <div class="card">
+                            <h2 class="card-title">Card Title</h2>
+                            <p class="card-body"> 
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti recusandae ea minima, 
+                                repellendus  <a href="#">Click!</a>  beatae molestias voluptatem.   
+                            </p>  
+                        </div>
+                    </div>
+                    <div class="col-12-xs col-5-sm col-3-xl">
+                        <div class="card">
+                            <h2 class="card-title">Card Title</h2>
+                            <p class="card-body"> 
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti recusandae ea minima, 
+                                repellendus  <a href="#">Click!</a>  beatae molestias voluptatem.   
+                            </p>  
+                        </div>
+                    </div>
+                    <div class="col-12-xs col-5-sm col-3-xl">
+                        <div class="card">
+                            <h2 class="card-title">Card Title</h2>
+                            <p class="card-body"> 
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti recusandae ea minima, 
+                                repellendus  <a href="#">Click!</a>  beatae molestias voluptatem.   
+                            </p>  
+                        </div>
+                    </div>
+                </div>
+            </div>
+        <!-- utilities -->
+        <span class="test">hello!</span>
+    </div>
 </body>
 </html>
