changes inside the project folder

--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
     <link rel="stylesheet" href="./assets/dist/index.css">
 </head>
 <body>
-    <nav class="navbar-teal-blue mb-4">
+    <nav class="navbar bg-white position-fixed">
         <div class="container">
-            <h2 class="nav-title text-white font-family-parisienne">
+            <h2 class="nav-title text-teal-blue-dark-5 font-family-parisienne">
                 Manjakely
             </h2>
-            <p class="font-family-nunito text-white">
+            <p class="font-family-nunito text-primary-dark-6">
                 Awesome CSS that makes your web-site beautiful
             </p>
         </div>
     </nav>
-    <div class="container">
-            
+    <div class="container position-relative main-container">
         <!-- Color -->
         <h2>Colors</h2>
         <span class="text-primary">primary</span> |
@@ -97,7 +96,7 @@
         <!-- Grid System -->
         <h2 class="mt-2 mb-2">Grid System</h2>
             <div class="container">
-                <div class="row grid-1 justify-flex-end">
+                <div class="row grid-1 justify-center">
                     <div class="col-12-xs col-5-sm col-3-xl">
                         <div class="card">
                             <h2 class="card-title">Card Title</h2>
@@ -173,7 +172,6 @@
                 </div>
             </div>
         <!-- utilities -->
-        <span class="test">hello!</span>
     </div>
 </body>
 </html>
